# arcoverlay

./: .gitignore  ArcCompanion.spec  LICENSE  Patchnotes.md  README.md  arc_companion.py  arcoverlay.py  pyproject.toml  requirements.txt
.agent/rules/: AGENTS.md
.agent/workflows/: checkcrash.md  majorreview.md  versionup.md
buildtools/: ArcOverlay.spec  ArcOverlayInstaller.iss  msi_setup.py
data/: versions.json
data/items/: advanced_arc_powercell.json  advanced_electrical_components.json  advanced_mechanical_components.json  alarm_clock.json  angled_grip_i.json  antiseptic.json  anvil_blueprint.json  anvil_i.json  anvil_ii.json  anvil_iii.json  anvil_iv.json  anvil_splitter.json  apricot.json  arc_circuitry.json  arc_coolant.json  arc_flex_rubber.json  arc_motion_core.json  arc_performance_steel.json  arc_synthetic_resin.json  arc_thermo_lining.json  arpeggio_i.json  arpeggio_ii.json  arpeggio_iii.json  arpeggio_iv.json  assorted_seeds.json  bastion_cell.json  battery.json  bettina_blueprint.json  bettina_i.json  bettina_ii.json  bettina_iii.json  bettina_iv.json  bicycle_pump.json  blaze_grenade.json  blaze_grenade_trap.json  (+232 more)
modules/: __init__.py  app_updater.py  base_page.py  config_manager.py  constants.py  data_manager.py  data_updater.py  database_fixer.py  database_manager.py  hideout_manager_window.py  image_processor.py  item_database_window.py  overlay_ui.py  progress_hub_window.py  project_manager_window.py  quest_manager_window.py  scanner.py  scanner_debug.py  settings_window.py  ui_components.py  update_checker.py
scripts/: fix_storage.py
(+20 files in other folders)
